# proto_defs

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md  ci.sh  generate_protos.sh
jarvis/sw/: Run_program.pb.go
jarvis/versions/: App_info.pb.go  App_info.proto  App_info_grpc.pb.go  Application.pb.go  Application.proto  Job_execution.pb.go  Job_execution.proto  Machine_stats.pb.go  Machine_stats.proto
pbs/jarvis/sw/: Run_program.proto
pbs/jarvis/versions/: App_info.proto  Application.proto  Job_execution.proto  Machine_stats.proto
proto_defs/: Run_program.proto
thoughts/: Run_program.proto
